# my_logger

./: .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
src/my_logger/: __init__.py  cli.py  db.py  logger.py  utils.py
tests/: db_test.py  logger_test.py  utils_test.py
